--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <li>C(cuz I only know it)</li>
 <li>Python(#trending)</li>
 <li>movie and all the time pass you can think of!!</li>
-  <center> <button align="center" type="button">Click Me!</button> </center>
+  <centre> <button align="center" type="button">Click Me!</button> </centre>
 </ul> 
 </body>
 </html>
