--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
 <title>Priyanshu Yadav</title>
 </head>
-<body background="dp.jpg">
+<body background="cyan">
 
 <h1 style="font-family =algerian color:white" align ="center">Priyanshu Yadav</h1>
-<p align ="center" color="white">So finally you have reached here!!</br>I am a first year under graduate student of IIT Kanpur in CSE department.I love Harry Potter movies as I don't like to read novels. I wish I could write more but as a matter of fact I don't have much to tell you.</p>
+<p align ="center" color="white">So finally you have reached here!!</br>I am a first year under graduate student of <a href="iitk.ac.in">IIT Kanpur in CSE department.I love Harry Potter movies as I don't like to read novels. I wish I could write more but as a matter of fact I don't have much to tell you.</p>
 <p color="white">My interests are</p>
 <ul>
 <li>Web Development</li>
