--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Priyanshu Yadav</title>
 </head>
-<body background="cyan">
+<body background="blue">
 
 <h1 style="font-family =algerian color:white" align ="center">Priyanshu Yadav</h1>
 <p align ="center" color="white">So finally you have reached here!!</br>I am a first year under graduate student of <a href="iitk.ac.in">IIT Kanpur </a> in CSE department.I love Harry Potter movies as I don't like to read novels. I wish I could write more but as a matter of fact I don't have much to tell you.</p>
